2002-03-15  Richard Williamson  <rjw@apple.com>

        More string usage optimizations.  Got another 10% or so.
        
	* src/kdelibs/khtml/css/cssstyleselector.cpp: (checkPseudoState),
	(khtml::applyRule):
	* src/kdelibs/khtml/rendering/render_text.cpp: (RenderText::calcMinMaxWidth),
	(RenderText::width):

2002-03-15  Darin Adler  <darin@apple.com>

	* src/kwq/KWQFontMetrics.mm: (QFontMetrics::descent): Oops, removed a - sign
	that I should have left in there.

2002-03-15  Darin Adler  <darin@apple.com>

	Some more optimizations. Carves another 6% or so off of NSView.html.

	* src/kwq/KWQChar.mm: (QChar::QChar): Handle characters > 0x7F correctly.
	(QChar::cell): Remove unnecessary & operation.
	(QChar::row): Remove unnecessary & operation.
	(QChar::latin1): Do a simpler check rather than calling row().
	(QChar::operator char): Do the same work as latin1 inline.
	(operator==) (operator!=), (operator>=), (operator>), (operator<=), (operator<):
	Handle characters > 0x7F correctly.

	* src/kwq/KWQFontMetrics.mm: (QFontMetrics::ascent), (QFontMetrics::descent):
	Cache the ascent and descent rather than computing it each time we are called.

2002-03-15  Darin Adler  <darin@apple.com>

	Optimizations for creating empty QFont objects, measuring certain single
	characters, and copying QFontMetrics objects. Makes loading NSView.html about
	18% faster.

	* src/kwq/qt/qfontmetrics.h: Use a ref-counted pointer so QFontMetrics objects
	for the same QFont can share data.

	* src/kwq/KWQFont.mm: (loadDefaultFont): New, used to load the default
	font used for default-initialized QFont objects.
	(QFont::_initializeWithFont): Don't recompute the family name, point size, or
	traits.
	(QFont::setFamily), (QFont::setPixelSizeFloat), (QFont::setWeight),
	(QFont::setItalic): autorelease the font, as we do in the destructor, since
	someone could still be using the result of getFont.
	(QFont::operator==): Add a comment about a problem with this function.
