@@ -49,11 +49,14 @@ void QComboBox::init(bool isEditable)
     //if (isEditable == FALSE)
     //    [comboBox setEditable: NO];
     setView (comboBox);
+    
+    items = [[NSMutableArray alloc] init];
 }
 
 
 QComboBox::~QComboBox()
 {
+    [items release];
 }
 
 
@@ -91,9 +94,28 @@ void QComboBox::insertItem(const QString &text, int index)
     
     if (index < 0)
         index = count();
+
+    NSMutableArray *newItems;
+    unsigned int i, _count;
+    
+    newItems = [[NSMutableArray alloc] init];
+    _count = (index+1 > count()) ? index+1 : count();
+    [comboBox removeAllItems];
+    for (i = 0; i < _count; i++){
+        if (i == (unsigned int)index)
+            [newItems addObject: QSTRING_TO_NSSTRING (text)];
+        else if (i < [items count])
+            [newItems addObject: [items objectAtIndex: i]];
+        else
+            [newItems addObject: @""];
+        [comboBox addItemWithTitle: [NSString stringWithFormat: @"%d", i]]; 
+    }
     // Hack to allow multiple items with same name.   Ugh.
-    [comboBox insertItemWithTitle: [NSString stringWithFormat: @"%d", index, nil] atIndex: index]; 
-    [[comboBox itemAtIndex: index] setTitle: QSTRING_TO_NSSTRING (text)];
+    for (i = 0; i < _count; i++){
+        [[comboBox itemAtIndex: i] setTitle: [newItems objectAtIndex: i]];
+    }
+    [items release];
+    items = newItems;
 }
 
 
